--- a/src/main/java/com/tec/plfinalproject/GUIFrame.form
+++ b/src/main/java/com/tec/plfinalproject/GUIFrame.form
@@ -97,14 +97,14 @@
                                       <Component id="bufferSize" max="32767" attributes="0"/>
                                       <Component id="nProducers" max="32767" attributes="0"/>
                                       <Component id="jLabel4" max="32767" attributes="0"/>
-                                      <Component id="jTextField4" min="-2" pref="86" max="-2" attributes="0"/>
+                                      <Component id="nRange" min="-2" pref="86" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="jLabel5" max="32767" attributes="0"/>
                                       <Component id="msProducers" alignment="0" max="32767" attributes="0"/>
                                       <Component id="msConsumers" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jSpinner3" min="-2" pref="109" max="-2" attributes="0"/>
+                                      <Component id="mRange" min="-2" pref="109" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -142,8 +142,8 @@
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jTextField4" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jSpinner3" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="nRange" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="mRange" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="errorBox" pref="20" max="32767" attributes="0"/>
@@ -169,9 +169,9 @@
                     <Property name="text" type="java.lang.String" value="Rango de Valores (n, m)"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField4">
+                <Component class="javax.swing.JTextField" name="nRange">
                 </Component>
-                <Component class="javax.swing.JSpinner" name="jSpinner3">
+                <Component class="javax.swing.JSpinner" name="mRange">
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel1">
                   <Properties>
